--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,11 +1,22 @@
-h1 Users
-a(href="/users/create") Create User
-form(action="/users/search", method="GET")
-	input(type="text", name="q")
-	button Search
-ul
-	each user in users
-		li 
-			span= user.name
+extends ../layout/common.pug
+block content
+		h1
+			span User
+			div
+				a.btn.btn-primary(href="/users/create") Create User
+
+		form.ml-auto(action="/users/search", method="GET", class="d-flex")
+			input#form-control(type='text', name="q")
 			span &nbsp;
-			a(href='/users/'+user.id) View
+			button.btn.btn-primary(type='button') Search
+		table.table
+			tr
+				th Name
+				th Phone
+				th Action
+			each user in users
+				tr
+					td= user.name
+					td= user.phone
+					td
+						a.btn.btn-light(href="/users/"+user.id) View
