--- a/views/users/view.pug
+++ b/views/users/view.pug
@@ -1,6 +1,9 @@
-h1 View User
+extends ../layout/common.pug
+block content
 
-p
-	b Name
-	span &nbsp;
-	span=user.name
+	h1 View User
+
+	p
+		b Name
+		span &nbsp;
+		span=user.name
