--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -5,10 +5,10 @@ block content
 			div
 				a.btn.btn-primary(href="/users/create") Create User
 
-		form.ml-auto(action="/users/search", method="GET", class="d-flex")
-			input#form-control(type='text', name="q")
+		form(action="/users/search", method="GET", class="d-flex")
+			input(type='text', name="q")
 			span &nbsp;
-			button.btn.btn-primary(type='button') Search
+			button.btn.btn-primary Search
 		table.table
 			tr
 				th Name
