--- a/views/users/view.pug
+++ b/views/users/view.pug
@@ -3,7 +3,10 @@ block content
 
 	h1 View User
 
-	p
-		b Name
-		span &nbsp;
-		span=user.name
+	table.table
+			tr
+				th Name
+				th Phone
+			tr
+				td= user.name
+				td= user.phone
